@@ -159,6 +159,17 @@ func GetAllUnspent(aa *btc.BtcAddr) (thisbal chain.AllUnspentTx) {
 					unsp := &chain.OneUnspentTx{TxPrevOut:btc.TxPrevOut{Hash:qr.TxID, Vout:vout},
 						Value:oo.Value, MinedAt:qr.InBlock, Coinbase:qr.Coinbase, BtcAddr:aa}
 
+					if int(vout+1) < len(qr.Outs) {
+						var msg []byte
+						if qr.Outs[vout+1]!=nil && len(qr.Outs[vout+1].PKScr)>1 && qr.Outs[vout+1].PKScr[0]==0x6a {
+							msg = qr.Outs[vout+1].PKScr[1:]
+						} else if int(vout+1)!=len(qr.Outs) && len(qr.Outs[len(qr.Outs)-1].PKScr)>1 && qr.Outs[len(qr.Outs)-1].PKScr[0]==0x6a {
+							msg = qr.Outs[len(qr.Outs)-1].PKScr[1:]
+						}
+						if msg!=nil {
+							_, unsp.Message, _, _ = btc.GetOpcode(msg)
+						}
+					}
 					thisbal = append(thisbal, unsp)
 				}
 			}
