@@ -1,4 +1,5 @@
 1.7.1:
+* Client: shows text messages attached to transactions (the first push after OP_RETURN)
 * Downloader: fix for getting stuck at fetching headers if the top would happen to be orphaned
 * Client: WebUI - "balance.json" support "summary" (to not include list of unspent outputs)
 * Client: WebUI/MakeTX - fixed sorting of outputs by block height
